cmake_minimum_required(VERSION 2.9)

project(QtilitiesExamples)

add_subdirectory(BuildingTreeStructures)
add_subdirectory(ClipboardExample)
add_subdirectory(ConsoleLogging)
add_subdirectory(ExportingExample)
add_subdirectory(MainWindowExample)
add_subdirectory(ObjectManagement)
add_subdirectory(ObserverWidgetExample)
add_subdirectory(PropertiesExample)
add_subdirectory(TasksExample)
add_subdirectory(TheBasicsExample)
	